<resources>
    <string name="app_name">KolorPen</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="uniqueMacAddress"></string>
    <string name="extra_address">device_address</string>
    <string name="title_activity_treatment_list">TreatmentList</string>
    <string name="title_activity_color_picker">ColorPickerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="dps">DPS</string>
    <string name="power">POWER</string>

    <string name="quick_tutorial">Quick Tutorial</string>
    <string name="user_guide">User Guide</string>
    <string name="app_update">Application Update</string>

    <string name="scan_code">Scan QR Code</string>
    <string name="color_remain">Color Remain</string>
    <string name="description_of_use">Description of use</string>
    <string name="ingredients">Ingredients</string>
    <string name="name_of_color">Name of color</string>
    <string name="amount_of_color">Amount of color</string>
    <string name="shelf_life_before">Shelf life before opening</string>
    <string name="shelf_life_after">Shelf life after opening</string>
    <string name="comp_details">Company Name and Address</string>

    <string name="quick_tutorial_file">quick_tutorial.pdf</string>
    <string name="user_guide_file">user_guide.pdf</string>

    <string name="customer_name">Name</string>
    <string name="description">Description</string>
    <string name="photo_before">before</string>
    <string name="photo_after">after</string>
    <string name="name_is_must">Must Enter Name First</string>

</resources>
